# yt-down-formac

./: .gitignore
.github/workflows/: build.yml
backend/: downloader.js  ecosystem.config.js  package-lock.json  package.json  server.js
backend/routes/: download.js
extension/: background.js  content.js  manifest.json  popup.html  popup.js
tauri-app/: index.html  package-lock.json  package.json  vite.config.js
tauri-app/src/: main.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs  main.rs
