[package]
name = "yt-downloader"
version = "0.1.0"
description = "YouTube Video Downloader"
authors = ["Waseem Akram / Addiztech"]
edition = "2021"

[lib]
name = "yt_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yt-downloader"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs-next = "2"
